--- a/TopGunLab_Practice3/TopGunLab_Practice3.csproj
+++ b/TopGunLab_Practice3/TopGunLab_Practice3.csproj
@@ -162,6 +162,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Home\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
