Add Remove method and view

--- a/TopGunLab_Practice3/TopGunLab_Practice3.csproj
+++ b/TopGunLab_Practice3/TopGunLab_Practice3.csproj
@@ -163,6 +163,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\Add.cshtml" />
+    <Content Include="Views\Home\_Remove.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
