--- a/TopGunLab_Practice3/TopGunLab_Practice3.csproj
+++ b/TopGunLab_Practice3/TopGunLab_Practice3.csproj
@@ -164,6 +164,7 @@
     <Content Include="Views\Home\Details.cshtml" />
     <Content Include="Views\Home\Add.cshtml" />
     <Content Include="Views\Home\_Remove.cshtml" />
+    <Content Include="Views\Home\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
