--- a/TopGunLab_Practice3/TopGunLab_Practice3.csproj
+++ b/TopGunLab_Practice3/TopGunLab_Practice3.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -165,6 +166,8 @@
     <Content Include="Views\Home\Add.cshtml" />
     <Content Include="Views\Home\_Remove.cshtml" />
     <Content Include="Views\Home\Edit.cshtml" />
+    <Content Include="Views\Error\PageNotFound.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
