--- a/TopGunLab_Practice3/Web.config
+++ b/TopGunLab_Practice3/Web.config
@@ -56,4 +56,12 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <remove statusCode="404"/>
+    <remove statusCode="403"/>
+    <error statusCode="404" path="/Error/PageNotFound" responseMode="ExecuteURL"/>
+    <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL"/>
+</httpErrors>
+  </system.webServer>
 </configuration>
